fix td overflow

--- a/themes/wechat-style/source/css/style.css
+++ b/themes/wechat-style/source/css/style.css
@@ -1385,6 +1385,8 @@ td, th {
 
 .post-content ul li {
   list-style-type: disc;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .post-content ol li {
